# fibulaprojectclientbot

./: .gitignore  COPYING.txt  HISTORIA-DEL-PROYECTO.md  README.en.md  README.md  TUTORIAL.en.md  TUTORIAL.md
Fibula-Client/: 12412201.map  12412202.map  12412203.map  12412204.map  12412205.map  12412206.map  12412211.map  12412213.map  12412214.map  12412215.map  12412301.map  12412302.map  12412303.map  12412304.map  12412305.map  12412306.map  12412307.map  12412308.map  12412309.map  12412310.map  12412311.map  12412313.map  12412314.map  12412315.map  12412401.map  12412402.map  12412403.map  12412404.map  12412405.map  12412406.map  12412407.map  12412409.map  12412411.map  12412413.map  12412414.map  12412415.map  12412501.map  12412502.map  12412503.map  12412504.map  (+561 more)
Fibula-Client/Assets/: Tibia.pic
source/: CMakeLists.txt
source/src/: LuaRuntime.cpp  LuaRuntime.h  Uint1024.h  const.h  container.h  creature.cpp  creature.h  defines.h  engine.cpp  engine.h  game.cpp  game.h  http.cpp  http.h  light.cpp  main.cpp  map.cpp  map.h  protocol.cpp  protocolgame.cpp  protocollogin.cpp  protocolloginHttp.cpp  robin_hood.h  screenText.h  softwareDrawning.cpp  spriteManager.cpp  structures.h  surfaceDirect3D9.cpp  surfaceDirect3D9.h  surfaceOpengl.h  surfaceOpenglCore.h  surfaceOpengles.h  surfaceOpengles2.h  util.cpp  util.h
source/src/GUI/: AdminTools.cpp  AdvancedGraphicsOptions.cpp  AutoEater.cpp  AutoFisher.cpp  AutoHealer.cpp  AutoLogout.cpp  AutoRuner.cpp  BattleWindow.cpp  BugReport.cpp  Chat.cpp  Chat.h  ComboLeader.cpp  ContainerWindow.cpp  Donate.cpp  EnterGame.cpp  GUI_UTIL.h  GeneralOptions.cpp  Health.cpp  Hotkeys.cpp  Info.cpp  Inventory.cpp  ItemMove.cpp  MagicWall.cpp  ManaTrainer.cpp  Minimap.cpp  Options.cpp  ShopWindow.cpp  SkillsWindow.cpp  SpellsWindow.cpp  VipWindow.cpp  VipWindow.h
source/src/GUI_Elements/: GUI_Container.cpp  GUI_Container.h  GUI_Content.cpp  GUI_Content.h  GUI_Element.h  GUI_Log.cpp  GUI_Log.h  GUI_Panel.cpp  GUI_PanelWindow.cpp  GUI_PanelWindow.h  GUI_ScrollBar.cpp  GUI_ScrollBar.h  GUI_Window.cpp  GUI_Window.h
source/src/visual-studio/visual-studio/: app.rc  visual-studio.vcxproj  visual-studio.vcxproj.filters
